force-app/main/default/objects/InvoiceLine__c/fields/Charge_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount_with_Tax__c</fullName>
    <label>Charge Amount with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>