force-app/main/default/objects/InvoiceLine__c/fields/ChargeTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeTaxAmount__c</fullName>
    <label>Charge Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>