force-app/main/default/objects/InvoiceLine__c/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>