force-app/main/default/objects/InvoiceLine__c/fields/InvoiceLineEndDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineEndDate__c</fullName>
    <label>Invoice Line End Date</label>
    <type>Date</type>
</CustomField>