force-app/main/default/objects/InvoiceLine__c/fields/InvoiceLineStartDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineStartDate__c</fullName>
    <label>Invoice Line Start Date</label>
    <type>Date</type>
</CustomField>