force-app/main/default/objects/InvoiceLine__c/fields/ReferenceEntityItemId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceEntityItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>