force-app/main/default/objects/InvoiceLine__c/fields/RelatedLineId__c.field-meta.xml
<CustomField>
    <fullName>RelatedLineId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Line</label>
    <referenceTo>InvoiceLine</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>